# dish_flow

./: .gitignore  pyproject.toml
dish_flow/: manage.py
dish_flow/accounts/: serializers.py  urls.py
dish_flow/dish_flow/: asgi.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
dish_flow/dish_flow/const/: choices.py
dish_flow/menu/: serializers.py  urls.py
dish_flow/orders/: serializers.py  urls.py
